app/assets/stylesheets/application.scss
// Graphical variables
@import "config/fonts";
@import "config/colors";
@import "config/bootstrap_variables";

// External libraries
@import "bootstrap/scss/bootstrap";
@import "font-awesome";
@import "flatpickr/dist/themes/material_orange.css";

// Your CSS partials
@import "pages/home";
@import "pages/index";
@import "pages/new_booking";
@import "pages/profile";
@import "pages/sessions";
@import "pages/show";
@import "pages/booking_index";
@import "pages/cookies";

html, body {
  max-width: 100%;
  overflow-x: hidden
}

.page-container {
  margin: 0px;
  padding: 0px;
}

.content-container{
  width: 100%;
  margin-top: 75px;
  display: flex;
  flex-direction: column;
  align-items: center;

  @media (min-width: 1000px) {
    width: 1050px;
    padding: 0px;
  }
}

